@startuml
class WalkthroughController {
    + WalkthroughController(getWalkthroughs:IGet<Walkthrough>, createWalkthrough:ICreate<Walkthrough, NewWalkthrough>, deleteWalkthrough:IDelete<Walkthrough>, updateWalkthrough:IUpdate<Walkthrough>)
    + <<async>> GetAll() : Task<IActionResult>
    + GetById(walkthroughId:int) : IActionResult
    + <<async>> AddNewWalkthrough(newWalkthrough:NewWalkthrough) : Task<IActionResult>
    + <<async>> DeleteWalkthrough(deletedWalkthrough:int) : Task<IActionResult>
    + <<async>> UpdateWalkthrough(updatedWalkthrough:Walkthrough) : Task<IActionResult>
}
class "IGet`1"<T> {
}
class "ICreate`2"<T1,T2> {
}
class "IDelete`1"<T> {
}
class "IUpdate`1"<T> {
}
WalktorughAppApiController <|-- WalkthroughController
WalkthroughController --> "_getWalkthroughs<Walkthrough>" "IGet`1"
WalkthroughController --> "_createWalkthrough<Walkthrough,NewWalkthrough>" "ICreate`2"
WalkthroughController --> "_deleteWalkthrough<Walkthrough>" "IDelete`1"
WalkthroughController --> "_updateWalkthrough<Walkthrough>" "IUpdate`1"
@enduml
